--- a/css/style.scss
+++ b/css/style.scss
@@ -105,7 +105,7 @@ body {
 
     header {
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         position: relative;
         top: 0;
         display: flex;
@@ -338,7 +338,7 @@ body {
                 margin-top: -100px;
                 width: 0px;
 
-                @include desktop {
+                @include tablet {
                     left: 100px;
                 }
             }
@@ -482,7 +482,11 @@ body {
             }
 
             a:first-of-type {
-                margin-left: 100px;
+                margin-left: 30px;
+
+                @include tablet {
+                    margin-left: 100px;
+                }
             }
         }
 
@@ -510,9 +514,25 @@ body {
 
             ul {
                 margin-top: 5px;
+                margin-bottom: 16px;
             }
 
+            .button {
+                padding: 20px 30px;
+                font-family: $bebas;
+                font-size: 2rem;
+                color: white;
+                text-decoration: none;
+                display: inline-block;
+                box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+                transition: 0.2s all;
+                background-color: #02684C;
+            }
 
+            .button:hover {
+                transform: translateY(-3px);
+                color: white;
+            }
 
             img {
                 max-width: 400px;
@@ -572,14 +592,14 @@ body {
     }
 
     #projects::-webkit-scrollbar {
-        height: 5px;
+        height: 10px;
     }
 
 
 }
 
 .project_body {
-    width: 100vw;
+
     min-height: calc(100vh - 120px);
     height: 100%;
 
@@ -588,10 +608,8 @@ body {
     header {
         height: 120px;
         position: absolute;
-    }
 
-    @include big {
-        header {
+        @include big {
             position: fixed;
         }
     }
@@ -602,7 +620,6 @@ body {
         max-width: 600px;
         margin: 0 auto;
         margin-top: 150px;
-        overflow: scroll;
 
         h1 {
             font-size: 5rem;
@@ -671,7 +688,7 @@ body {
         }
 
         ul {
-            margin-top: 0;
+            margin-top: 5px;
             margin-bottom: 30px;
         }
 
