rearranged projects section

--- a/css/style.scss
+++ b/css/style.scss
@@ -323,35 +323,28 @@ body {
             overflow-x: scroll;
             display: grid;
             align-content: center;
-            grid-template-columns: repeat(5, 1fr);
-            height: 100vh;
+            justify-items: center;
+            grid-template-columns: 1fr;
             width: 100%;
             position: relative;
-            // scroll-snap-type: x proximity;
+            grid-gap: 30px;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 30px;
 
-
-
-            h1 {
-                position: sticky;
-                top: 30px;
-                left: 30px;
-                margin-top: -100px;
-                width: 0px;
-
-                @include tablet {
-                    left: 100px;
-                }
+            @include desktop {
+                grid-template-columns: repeat(2, 1fr);
             }
 
-            a {
-                margin-right: 20px;
-
+            h1 {
+                position: absolute;
+                top: 0;
+                left: 30px;
             }
 
             .project {
-                width: 600px;
+                width: 100%;
                 height: 400px;
-                max-width: 90vw;
                 background-color: #02684C;
                 transition: 0.3s all;
 
@@ -359,9 +352,6 @@ body {
                 justify-content: center;
                 position: relative;
                 cursor: pointer;
-
-                // scroll-snap-align: center;
-
 
                 figure {
                     margin: 0;
@@ -443,6 +433,7 @@ body {
 
             .project_1 {
                 background: $baggrund_1;
+                margin-top: 75px;
 
                 .overlay {
                     .overlay_bg {
@@ -453,6 +444,10 @@ body {
 
             .project_2 {
                 background: $baggrund_2;
+
+                @include desktop {
+                    margin-top: 75px;
+                }
 
                 .overlay {
                     .overlay_bg {
@@ -481,12 +476,8 @@ body {
                 }
             }
 
-            a:first-of-type {
-                margin-left: 30px;
-
-                @include tablet {
-                    margin-left: 100px;
-                }
+            a:nth-child(2) {
+                grid-column: 1;
             }
         }
 
@@ -495,10 +486,10 @@ body {
         }
 
         #about {
-            height: 100vh;
             padding: 30px;
             max-width: 800px;
             margin: auto;
+            margin-top: 100px;
 
             #about_wrap {
                 @include desktop {
@@ -583,19 +574,9 @@ body {
 
     }
 
-    #projects::-webkit-scrollbar-track {
-        background-color: $nav_2;
-    }
-
-    #projects::-webkit-scrollbar-thumb {
-        background-color: $nav_1;
-    }
-
     #projects::-webkit-scrollbar {
-        height: 10px;
+        height: 0px;
     }
-
-
 }
 
 .project_body {
