--- a/css/style.css
+++ b/css/style.css
@@ -318,36 +318,33 @@ body main #projects {
   display: grid;
   -ms-flex-line-pack: center;
       align-content: center;
-  -ms-grid-columns: (1fr)[5];
-      grid-template-columns: repeat(5, 1fr);
-  height: 100vh;
+  justify-items: center;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   width: 100%;
   position: relative;
+  grid-gap: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
-body main #projects h1 {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 30px;
-  left: 30px;
-  margin-top: -100px;
-  width: 0px;
-}
-
-@media (min-width: 500px) {
-  body main #projects h1 {
-    left: 100px;
+@media (min-width: 800px) {
+  body main #projects {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
-body main #projects a {
-  margin-right: 20px;
+body main #projects h1 {
+  position: absolute;
+  top: 0;
+  left: 30px;
 }
 
 body main #projects .project {
-  width: 600px;
+  width: 100%;
   height: 400px;
-  max-width: 90vw;
   background-color: #02684C;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
@@ -457,6 +454,7 @@ body main #projects .project:hover {
 
 body main #projects .project_1 {
   background: linear-gradient(315deg, #0a71b5 0%, #d9adc3 0%, #f4e5ec 100%);
+  margin-top: 75px;
 }
 
 body main #projects .project_1 .overlay .overlay_bg {
@@ -465,6 +463,12 @@ body main #projects .project_1 .overlay .overlay_bg {
 
 body main #projects .project_2 {
   background: linear-gradient(315deg, #0a71b5 0%, #0a71b5 0%, #5facdf 100%);
+}
+
+@media (min-width: 800px) {
+  body main #projects .project_2 {
+    margin-top: 75px;
+  }
 }
 
 body main #projects .project_2 .overlay .overlay_bg {
@@ -487,14 +491,9 @@ body main #projects .project_4 .overlay .overlay_bg {
   background: linear-gradient(315deg, #006b00 0%, #4dd94d 100%);
 }
 
-body main #projects a:first-of-type {
-  margin-left: 30px;
-}
-
-@media (min-width: 500px) {
-  body main #projects a:first-of-type {
-    margin-left: 100px;
-  }
+body main #projects a:nth-child(2) {
+  -ms-grid-column: 1;
+  grid-column: 1;
 }
 
 body main #me {
@@ -502,10 +501,10 @@ body main #me {
 }
 
 body main #about {
-  height: 100vh;
   padding: 30px;
   max-width: 800px;
   margin: auto;
+  margin-top: 100px;
 }
 
 @media (min-width: 800px) {
@@ -596,16 +595,8 @@ body main #about #contact a:hover {
   color: #02684C;
 }
 
-body #projects::-webkit-scrollbar-track {
-  background-color: #3AB594;
-}
-
-body #projects::-webkit-scrollbar-thumb {
-  background-color: #02684C;
-}
-
 body #projects::-webkit-scrollbar {
-  height: 10px;
+  height: 0px;
 }
 
 .project_body {
