--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   scroll-behavior: smooth;
+  --vh: 1vh;
 }
 
 @font-face {
@@ -61,6 +62,7 @@ body span {
 
 body header {
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   position: relative;
   top: 0;
@@ -170,6 +172,12 @@ body header nav a:hover {
   }
   body header nav a {
     font-size: 15rem;
+  }
+}
+
+@media (max-height: 700px) {
+  body header nav a {
+    font-size: 10rem;
   }
 }
 
@@ -290,7 +298,7 @@ body main #projects {
 
 body main #projects h1 {
   position: absolute;
-  top: 0;
+  top: 30px;
   left: 30px;
 }
 
@@ -406,7 +414,7 @@ body main #projects .project:hover {
 
 body main #projects .project_1 {
   background: linear-gradient(315deg, #0a71b5 0%, #d9adc3 0%, #f4e5ec 100%);
-  margin-top: 75px;
+  margin-top: 105px;
 }
 
 body main #projects .project_1 .overlay .overlay_bg {
@@ -419,7 +427,7 @@ body main #projects .project_2 {
 
 @media (min-width: 800px) {
   body main #projects .project_2 {
-    margin-top: 75px;
+    margin-top: 105px;
   }
 }
 
@@ -619,6 +627,10 @@ body #projects::-webkit-scrollbar {
   }
 }
 
+.project_body .project_wrap .project_content {
+  position: relative;
+}
+
 .project_body .project_wrap .button:hover {
   -webkit-transform: translateY(-3px);
           transform: translateY(-3px);
@@ -634,20 +646,22 @@ body #projects::-webkit-scrollbar {
 .project_body .project_wrap .small {
   margin: 5px 0;
   font-size: 1.6rem;
-  position: absolute;
-  top: 150px;
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  margin-left: -27px;
   text-decoration: underline;
 }
 
 @media (min-width: 500px) {
   .project_body .project_wrap .small {
-    margin-left: -36px;
+    margin: 5px 0 0 -36px;
+    font-size: 1.6rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-writing-mode: vertical-rl;
+        -ms-writing-mode: tb-rl;
+            writing-mode: vertical-rl;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    text-decoration: underline;
   }
 }
 
